# bb-imager-rs

./: .gitattributes  Cargo.toml  README.md  config.json
bb-config/: Cargo.toml
bb-config/src/: config.rs
bb-downloader/src/: lib.rs
bb-drivelist/src/: device.rs
bb-drivelist/src/pal/: linux.rs  macos.rs  windows.rs
bb-flasher-sd/: Cargo.toml
bb-flasher-sd/src/: customization.rs  lib.rs
bb-flasher/src/: common.rs
bb-flasher/src/flasher/: dfu.rs  sd.rs
bb-flasher/src/flasher/bcf/: cc1352p7.rs  msp430.rs
bb-flasher/src/flasher/pb2/mspm0/: mod.rs
bb-imager-cli/src/: main.rs
bb-imager-gui/: Cargo.toml
bb-imager-gui/src/: constants.rs  helpers.rs  main.rs  message.rs  persistance.rs  state.rs
bb-imager-gui/src/ui/: app_info.rs  board_selection.rs  configuration.rs  destination_selection.rs  flash.rs  flash_cancel.rs  flash_fail.rs  flash_success.rs  helpers.rs  image_selection.rs  mod.rs  review.rs
