[workspace]
resolver = "2"

members = [
	"bb-flasher",
	"bb-imager-cli", "bb-flasher-pb2-mspm0",
	"bb-imager-gui", "bb-imager-service",
	"xtask", "bb-flasher-bcf", "bb-flasher-sd", "bb-downloader", "bb-config", "bb-helper", "bb-flasher-dfu",
	"bb-drivelist"
]

[profile.release]
strip = true
lto = "thin"

[workspace.package]
version = "0.0.20"
edition = "2024"
authors = ["Ayush Singh <ayush@beagleboard.org>"]
repository = "https://openbeagle.org/ayush1325/bb-imager-rs"
license = "MIT"
