[package]
name = "bb-imager-gui"
description = "The easiest way to install the latest operating system images for your Beagle."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.14.0", features = ["image", "svg", "tokio", "advanced", "lazy", "canvas"] }
rfd = { version = "0.16.0", default-features = false, features = ["tokio", "file-handle-inner"] }
bb-flasher = { path = "../bb-flasher" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
iced_aw = { version = "0.13.0", default-features = false, features = ["spinner"] }
image = "0.25"
tokio = { version = "1.49", default-features = false, features = ["macros"] }
webbrowser = "1.0.6"
notify-rust = "4.11.5"
url = "2.5.4"
whoami = "2.1"
localzone = "0.3.1"
tokio-stream = "0.1.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
directories = "6.0.0"
bb-downloader = { path = "../bb-downloader", features = ["json"] }
bb-config = { path = "../bb-config" }
bb-helper = { path = "../bb-helper", features = ["file_stream"] }
tokio-util = { version = "0.7" }
semver = "1.0.27"
anyhow = "1.0"

[build-dependencies]
embed-resource = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_linux_udev"] }
rfd = { version = "0.16.0", default-features = false, features = ["xdg-portal", "tokio", "file-handle-inner"] }
ashpd = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_macos_authopen"] }

[features]
pb2_mspm0 = ["bb-flasher/pb2_mspm0_dbus"]
bcf_cc1352p7 = ["bb-flasher/bcf"]
# GUI requires the base board support for any sub soc firmware
bcf_msp430 = ["bb-flasher/bcf_msp430", "bcf_cc1352p7"]
# Handle application updates
updater = []

[package.metadata.packager]
icons = ["assets/icons/icon.*"]
category = "DeveloperTool"
identifier = "org.beagleboard.imagingutility"
out_dir = "dist"
product_name = "BeagleBoard Imaging Utility"

[package.metadata.packager.wix]
banner_path = "assets/icons/installer_banner.png"
dialog_image_path = "assets/icons/dialog_image.png"

[package.metadata.packager.deb]
package_name = "bb-imager-gui"
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }

[package.metadata.packager.pacman]
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }
